--- a/app/views/tolk/searches/show.html.erb
+++ b/app/views/tolk/searches/show.html.erb
@@ -26,14 +26,14 @@
                   <%= hidden_field_tag :"translations[][id]", translation.id, :id => "#{translation.object_id}_id" %>
                   <%= hidden_field_tag :"translations[][phrase_id]", phrase.id, :id => "#{translation.object_id}_phrase_id" %>
                   <%= hidden_field_tag :"translations[][locale_id]", translation.locale_id, :id => "#{translation.object_id}_locale_id" %>
-                  <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale", :id => "#{translation.object_id}_text", :onfocus => "$(this).up('tr').addClassName('active');", :onblur => "$(this).up('tr').removeClassName('active');" %>
+                  <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale form-control", :id => "#{translation.object_id}_text", :onfocus => "$(this).up('tr').addClassName('active');", :onblur => "$(this).up('tr').removeClassName('active');" %>
                 </td>
                 <td class="actions">
                   <a class="copy" href="#" tabindex="-1" title="Copy original translation">&larr;</a><br>
                   <span class="warning" title="Interpolation keys don't match">⚠</span>
                 </td>
                 <td class="original">
-                  <%= text_area_tag :"translations[][original_text]", format_i18n_text_area_value(phrase.translations.primary.text), :disabled => true %>
+                  <%= text_area_tag :"translations[][original_text]", format_i18n_text_area_value(phrase.translations.primary.text), :disabled => true, :class => 'form-control' %>
 
                   <% if params[:q].present? -%>
                     <%= highlight(format_i18n_value(phrase.translations.primary.text), params[:q]) -%>
@@ -51,7 +51,7 @@
           <% end %>
         </table>
         <div class="table_submit">
-          <p><%= locale_form.submit "Save changes", :class => 'save' %></p>
+          <p><%= locale_form.submit "Save changes", :class => 'save btn btn-success' %></p>
         </div>
       <% end %>
       <div class="paginate">
