--- a/app/views/tolk/searches/_form.html.erb
+++ b/app/views/tolk/searches/_form.html.erb
@@ -3,8 +3,8 @@
   Search for
   <%= scope_selector_for(@locale) %>
   phrase:
-  <%= text_field_tag :q, params[:q], :class: 'form-control' %>
+  <%= text_field_tag :q, params[:q], :class => 'form-control' %>
   within key:
-  <%= text_field_tag :k, params[:k], :class: 'form-control' %>
+  <%= text_field_tag :k, params[:k], :class => 'form-control' %>
   <%= submit_tag "Search", :name => nil, :class => 'btn btn-primary' %>
 <% end %>
