--- a/app/views/tolk/searches/show.html.erb
+++ b/app/views/tolk/searches/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
-  <h3 class="search">
+  <div class="search">
     <%= render :partial => "form", :locals => { :locale => @locale } %>
-  </h3>
+  </div>
 
   <div class="search_exits">
     <%= link_to "Phrases missing translation", @locale %>
