--- a/app/views/tolk/searches/show.html.erb
+++ b/app/views/tolk/searches/show.html.erb
@@ -14,44 +14,46 @@
   <div class="translations">
     <% if @phrases.any? %>
        <%= form_for @locale do |locale_form| %>
-        <table class="translations">
-          <tr>
-            <th class="translation"><%= @locale.language_name -%></th>
-            <th class="actions"></th>
-            <th class="key"><%= Tolk::Locale.primary_language_name -%></th>
-          </tr>
+        <div class="translations">
+          <div class="row">
+            <div class="translation col-md-5"><%= @locale.language_name -%></div>
+            <div class="actions col-md-2"></div>
+            <div class="key col-md-5"><%= Tolk::Locale.primary_language_name -%></div>
+          </div>
           <% @phrases.each do |phrase| %>
 
             <% if translation = phrase.translations.where(locale_id: @locale.id).first || Tolk::Translation.new(:locale => @locale, :phrase => phrase) %>
-              <tr>
-                <td class="translation">
+              <div class="row">
+                <div class="translation col-md-5">
                   <%= hidden_field_tag :"translations[][id]", translation.id, :id => "#{translation.object_id}_id" %>
                   <%= hidden_field_tag :"translations[][phrase_id]", phrase.id, :id => "#{translation.object_id}_phrase_id" %>
                   <%= hidden_field_tag :"translations[][locale_id]", translation.locale_id, :id => "#{translation.object_id}_locale_id" %>
                   <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale form-control", :id => "#{translation.object_id}_text", :onfocus => "$(this).up('tr').addClassName('active');", :onblur => "$(this).up('tr').removeClassName('active');" %>
-                </td>
-                <td class="actions">
+                </div>
+                <div class="actions col-md-2">
                   <a class="copy" href="#" tabindex="-1" title="Copy original translation">&larr;</a><br>
                   <span class="warning" title="Interpolation keys don't match">⚠</span>
-                </td>
-                <td class="original">
+                </div>
+                <div class="original col-md-5">
                   <%= text_area_tag :"translations[][original_text]", format_i18n_text_area_value(phrase.translations.primary.text), :disabled => true, :class => 'form-control' %>
 
-                  <% if params[:q].present? -%>
-                    <%= highlight(format_i18n_value(phrase.translations.primary.text), params[:q]) -%>
-                  <% else -%>
-                    <%= format_i18n_value(phrase.translations.primary.text) -%>
-                  <% end -%>
-                  <%= boolean_warning if phrase.translations.primary.boolean? -%>
+                  <div>
+                    <% if params[:q].present? -%>
+                      <%= highlight(format_i18n_value(phrase.translations.primary.text), params[:q]) -%>
+                    <% else -%>
+                      <%= format_i18n_value(phrase.translations.primary.text) -%>
+                    <% end -%>
+                    <%= boolean_warning if phrase.translations.primary.boolean? -%>
 
-                  <span class="key" title="<%= phrase.key %>"><%= params[:k].present? ?
-                  highlight(h(truncate(phrase.key, :length => 100)), params[:k]) :
-                  h(truncate(phrase.key, :length => 100)) %></span>
-                </td>
-              </tr>
+                    <span class="key" title="<%= phrase.key %>"><%= params[:k].present? ?
+                    highlight(h(truncate(phrase.key, :length => 100)), params[:k]) :
+                    h(truncate(phrase.key, :length => 100)) %></span>
+                  </div>
+                </div>
+              </div>
             <% end %>
           <% end %>
-        </table>
+        </div>
         <div class="table_submit">
           <p><%= locale_form.submit "Save changes", :class => 'save btn btn-success' %></p>
         </div>
