--- a/app/views/tolk/locales/all.html.erb
+++ b/app/views/tolk/locales/all.html.erb
@@ -60,7 +60,7 @@
       <div class="table_submit">
         <p><%= locale_form.submit "Save changes", :class => 'save btn btn-success' %></p>
       </div>
-      <div class="paginate">
+      <div class="paginate text-center">
         <%= tolk_paginate @phrases %>
       </div>
     <% end %>
