--- a/app/views/tolk/searches/show.html.erb
+++ b/app/views/tolk/searches/show.html.erb
@@ -58,7 +58,7 @@
           <p><%= locale_form.submit "Save changes", :class => 'save btn btn-success' %></p>
         </div>
       <% end %>
-      <div class="paginate">
+      <div class="paginate text-center">
         <%= tolk_paginate @phrases %>
       </div>
     <% else %>
