--- a/app/views/tolk/locales/show.html.erb
+++ b/app/views/tolk/locales/show.html.erb
@@ -46,7 +46,12 @@
                 <span class="warning" title="Interpolation keys don't match">⚠</span>
               </div>
               <div class="original col-md-5">
-                <%= text_area_tag :"translations[][original_text]", format_i18n_text_area_value(phrase.translations.primary.text), :disabled => true, :class => 'form-control' %>
+                <%= text_area_tag :"translations[][original_text]",
+                    format_i18n_text_area_value(phrase.translations.primary.text),
+                    :disabled => true,
+                    :class => 'form-control',
+                    :title => phrase.key
+                %>
 
                 <div>
                   <% if params[:q].present? -%>
@@ -55,8 +60,6 @@
                     <%= format_i18n_value(phrase.translations.primary.text) -%>
                   <% end -%>
                   <%= boolean_warning if phrase.translations.primary.boolean? -%>
-
-                  <span class="key" title="<%= phrase.key %>"><%= truncate(phrase.key, :length => 100) %></span>
                 </div>
               </div>
             </div>
