--- a/app/views/tolk/searches/show.html.erb
+++ b/app/views/tolk/searches/show.html.erb
@@ -43,7 +43,12 @@
                   <span class="warning" title="Interpolation keys don't match">⚠</span>
                 </div>
                 <div class="original col-md-5">
-                  <%= text_area_tag :"translations[][original_text]", format_i18n_text_area_value(phrase.translations.primary.text), :disabled => true, :class => 'form-control' %>
+                  <%= text_area_tag :"translations[][original_text]",
+                      format_i18n_text_area_value(phrase.translations.primary.text),
+                      :disabled => true,
+                      :class => 'form-control',
+                      :title => phrase.key
+                  %>
 
                   <div>
                     <% if params[:q].present? -%>
@@ -52,10 +57,6 @@
                       <%= format_i18n_value(phrase.translations.primary.text) -%>
                     <% end -%>
                     <%= boolean_warning if phrase.translations.primary.boolean? -%>
-
-                    <span class="key" title="<%= phrase.key %>"><%= params[:k].present? ?
-                    highlight(h(truncate(phrase.key, :length => 100)), params[:k]) :
-                    h(truncate(phrase.key, :length => 100)) %></span>
                   </div>
                 </div>
               </div>
