--- a/app/views/tolk/locales/show.html.erb
+++ b/app/views/tolk/locales/show.html.erb
@@ -20,13 +20,12 @@
        <%= form_for @locale do |locale_form| %>
         <div class="translations">
           <div class="row">
-            <div class="translation col-md-5">
+            <div class="translation col-md-6">
               <div class="h5">
                 <%= @locale.language_name -%>
               </div>
             </div>
-            <div class="actions col-md-2"></div>
-            <div class="key col-md-5">
+            <div class="key col-md-6">
               <div class="h5">
                 <%= Tolk::Locale.primary_language_name -%>
               </div>
@@ -35,25 +34,16 @@
           <% @phrases.each do |phrase| %>
             <div class="row">
               <% translation = Tolk::Translation.new(:locale => @locale, :phrase => phrase) %>
-              <div class="translation col-md-5">
+              <div class="translation col-md-6">
                 <%= hidden_field_tag :"translations[][id]", translation.id, :id => "#{translation.object_id}_id" %>
                 <%= hidden_field_tag :"translations[][phrase_id]", phrase.id, :id => "#{translation.object_id}_phrase_id" %>
                 <%= hidden_field_tag :"translations[][locale_id]", translation.locale_id, :id => "#{translation.object_id}_locale_id" %>
+                <div>Translation:</div>
                 <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale form-control", :id => "#{translation.object_id}_text" %>
               </div>
-              <div class="actions col-md-2">
-                <a class="copy" href="#" tabindex="-1" title="Copy original translation">&larr;</a><br>
-                <span class="warning" title="Interpolation keys don't match">⚠</span>
-              </div>
-              <div class="original col-md-5">
-                <%= text_area_tag :"translations[][original_text]",
-                    format_i18n_text_area_value(phrase.translations.primary.text),
-                    :disabled => true,
-                    :class => 'form-control',
-                    :title => phrase.key
-                %>
-
+              <div class="original col-md-6">
                 <div>
+                  Original:
                   <% if params[:q].present? -%>
                     <%= highlight(format_i18n_value(phrase.translations.primary.text), params[:q]) -%>
                   <% else -%>
@@ -61,6 +51,13 @@
                   <% end -%>
                   <%= boolean_warning if phrase.translations.primary.boolean? -%>
                 </div>
+
+                <%= text_area_tag :"translations[][original_text]",
+                    format_i18n_text_area_value(phrase.translations.primary.text),
+                    :disabled => true,
+                    :class => 'form-control',
+                    :title => phrase.key
+                %>
               </div>
             </div>
           <% end %>
