--- a/app/views/tolk/locales/all.html.erb
+++ b/app/views/tolk/locales/all.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3 class="switch">Completed translations <span>(<%= link_to 'See phrases missing translation', @locale %>)</span></h3>
+  <h3 class="switch">Completed translations <small>(<%= link_to 'See phrases missing translation', @locale %>)</small></h3>
 
   <% if @locale.has_updated_translations? && action_name != 'updated' %>
     <span class="notice">Some phrases have changed. <%= link_to "Update translations", tolk.updated_locale_path(@locale) %>.</span>
