--- a/app/views/tolk/locales/all.html.erb
+++ b/app/views/tolk/locales/all.html.erb
@@ -2,7 +2,12 @@
   <h3 class="switch">Completed translations <small>(<%= link_to 'See phrases missing translation', @locale %>)</small></h3>
 
   <% if @locale.has_updated_translations? && action_name != 'updated' %>
-    <span class="notice">Some phrases have changed. <%= link_to "Update translations", tolk.updated_locale_path(@locale) %>.</span>
+    <div class="alert alert-info alert-dismissible">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      Some phrases have changed. <%= link_to "Update translations", tolk.updated_locale_path(@locale) %>.
+    </div>
   <% end %>
 
   <div class="search">
