--- a/app/views/tolk/locales/show.html.erb
+++ b/app/views/tolk/locales/show.html.erb
@@ -6,7 +6,12 @@
   <h3 class="switch">Phrases missing translation (<%= @locale.count_phrases_without_translation %>) <small>(<%= link_to 'See completed translations', tolk.all_locale_path(@locale) %>)</small></h3>
 
   <% if @locale.has_updated_translations? && action_name != 'updated' %>
-    <span class="notice">Some phrases have changed. <%= link_to "Update translations", tolk.updated_locale_path(@locale) %>.</span>
+    <div class="alert alert-info alert-dismissible">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      Some phrases have changed. <%= link_to "Update translations", tolk.updated_locale_path(@locale) %>.
+    </div>
   <% end %>
 
   <div class="search">
