[+] Playing with panels

--- a/app/views/tolk/searches/show.html.erb
+++ b/app/views/tolk/searches/show.html.erb
@@ -30,33 +30,39 @@
           <% @phrases.each do |phrase| %>
 
             <% if translation = phrase.translations.where(locale_id: @locale.id).first || Tolk::Translation.new(:locale => @locale, :phrase => phrase) %>
-              <div class="row">
-                <div class="translation col-md-6">
-                  <%= hidden_field_tag :"translations[][id]", translation.id, :id => "#{translation.object_id}_id" %>
-                  <%= hidden_field_tag :"translations[][phrase_id]", phrase.id, :id => "#{translation.object_id}_phrase_id" %>
-                  <%= hidden_field_tag :"translations[][locale_id]", translation.locale_id, :id => "#{translation.object_id}_locale_id" %>
-                  <div>Translation:</div>
-                  <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale form-control", :id => "#{translation.object_id}_text", :onfocus => "$(this).up('tr').addClassName('active');", :onblur => "$(this).up('tr').removeClassName('active');" %>
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <code>
+                    <% if params[:q].present? -%>
+                      <%= highlight(format_i18n_value(phrase.translations.primary.text), params[:q]) -%>
+                    <% else -%>
+                      <%= format_i18n_value(phrase.translations.primary.text) -%>
+                    <% end -%>
+                  </code>
+                  <%= boolean_warning if phrase.translations.primary.boolean? -%>
                 </div>
-                <div class="original col-md-6">
-                  <div>
-                    Original:
-                    <code>
-                      <% if params[:q].present? -%>
-                        <%= highlight(format_i18n_value(phrase.translations.primary.text), params[:q]) -%>
-                      <% else -%>
-                        <%= format_i18n_value(phrase.translations.primary.text) -%>
-                      <% end -%>
-                    </code>
-                    <%= boolean_warning if phrase.translations.primary.boolean? -%>
-                  </div>
+                <div class="panel-body">
+                  <div class="row">
+                    <div class="translation col-md-6">
+                      <%= hidden_field_tag :"translations[][id]", translation.id, :id => "#{translation.object_id}_id" %>
+                      <%= hidden_field_tag :"translations[][phrase_id]", phrase.id, :id => "#{translation.object_id}_phrase_id" %>
+                      <%= hidden_field_tag :"translations[][locale_id]", translation.locale_id, :id => "#{translation.object_id}_locale_id" %>
+                      <div>Translation:</div>
+                      <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale form-control", :id => "#{translation.object_id}_text", :onfocus => "$(this).up('tr').addClassName('active');", :onblur => "$(this).up('tr').removeClassName('active');" %>
+                    </div>
+                    <div class="original col-md-6">
+                      <div>
+                        Original:
+                      </div>
 
-                  <%= text_area_tag :"translations[][original_text]",
-                      format_i18n_text_area_value(phrase.translations.primary.text),
-                      :disabled => true,
-                      :class => 'form-control',
-                      :title => phrase.key
-                  %>
+                      <%= text_area_tag :"translations[][original_text]",
+                          format_i18n_text_area_value(phrase.translations.primary.text),
+                          :disabled => true,
+                          :class => 'form-control',
+                          :title => phrase.key
+                      %>
+                    </div>
+                  </div>
                 </div>
               </div>
               <br>
