--- a/app/views/tolk/locales/all.html.erb
+++ b/app/views/tolk/locales/all.html.erb
@@ -34,38 +34,42 @@
         </div>
         <% @phrases.each do |phrase| %>
           <% if phrase.translations.primary %>
-            <div class="row">
-              <div class="translation col-md-6">
-                <%= hidden_field_tag :"translations[][id]", phrase.translation.id %>
-                <%= hidden_field_tag :"translations[][locale_id]", phrase.translation.locale_id %>
-                <div>Translation:</div>
-                <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(phrase.translation.text), :class => 'locale form-control',
-                                  :onfocus => "$(this).up('tr').addClassName('active');", :onblur => "$(this).up('tr').removeClassName('active');" %>
-              </div>
-              <div class="original col-md-6">
-                <% if action_name == 'updated' %>
-                  <div class="updated">
-                    <span class="key">Updated</span>
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="row">
+                <div class="translation col-md-6">
+                  <%= hidden_field_tag :"translations[][id]", phrase.translation.id %>
+                  <%= hidden_field_tag :"translations[][locale_id]", phrase.translation.locale_id %>
+                  <div>Translation:</div>
+                  <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(phrase.translation.text), :class => 'locale form-control',
+                                    :onfocus => "$(this).up('tr').addClassName('active');", :onblur => "$(this).up('tr').removeClassName('active');" %>
+                </div>
+                <div class="original col-md-6">
+                  <% if action_name == 'updated' %>
+                    <div class="updated">
+                      <span class="key">Updated</span>
+                      <%= format_i18n_value(phrase.translations.primary.text) -%>
+                      <%= boolean_warning if phrase.translations.primary.boolean? -%>
+                    </div>
+                    <div class="previous">
+                      <span class="key">Previous</span>
+                      <%= format_i18n_value(phrase.translations.primary.previous_text) -%>
+                    </div>
+                  <% else %>
+                    Original:
                     <%= format_i18n_value(phrase.translations.primary.text) -%>
                     <%= boolean_warning if phrase.translations.primary.boolean? -%>
-                  </div>
-                  <div class="previous">
-                    <span class="key">Previous</span>
-                    <%= format_i18n_value(phrase.translations.primary.previous_text) -%>
-                  </div>
-                <% else %>
-                  Original:
-                  <%= format_i18n_value(phrase.translations.primary.text) -%>
-                  <%= boolean_warning if phrase.translations.primary.boolean? -%>
-                <% end %>
+                  <% end %>
 
-                <%= text_area_tag :"translations[][original_text]",
-                    format_i18n_text_area_value(phrase.translations.primary.text),
-                    :disabled => true,
-                    :class => 'form-control',
-                    :title => phrase.key
-                %>
-              </div>
+                  <%= text_area_tag :"translations[][original_text]",
+                      format_i18n_text_area_value(phrase.translations.primary.text),
+                      :disabled => true,
+                      :class => 'form-control',
+                      :title => phrase.key
+                  %>
+                </div>
+            </div>
+          </div>
             </div>
             <br>
           <% end %>
