--- a/app/views/tolk/locales/all.html.erb
+++ b/app/views/tolk/locales/all.html.erb
@@ -35,6 +35,23 @@
         <% @phrases.each do |phrase| %>
           <% if phrase.translations.primary %>
           <div class="panel panel-default">
+            <div class="panel-heading">
+              <% if action_name == 'updated' %>
+                <div class="updated">
+                  <span class="key">Updated</span>
+                  <%= format_i18n_value(phrase.translations.primary.text) -%>
+                  <%= boolean_warning if phrase.translations.primary.boolean? -%>
+                </div>
+                <div class="previous">
+                  <span class="key">Previous</span>
+                  <%= format_i18n_value(phrase.translations.primary.previous_text) -%>
+                </div>
+              <% else %>
+                Original:
+                <%= format_i18n_value(phrase.translations.primary.text) -%>
+                <%= boolean_warning if phrase.translations.primary.boolean? -%>
+              <% end %>
+            </div>
             <div class="panel-body">
               <div class="row">
                 <div class="translation col-md-6">
@@ -45,21 +62,7 @@
                                     :onfocus => "$(this).up('tr').addClassName('active');", :onblur => "$(this).up('tr').removeClassName('active');" %>
                 </div>
                 <div class="original col-md-6">
-                  <% if action_name == 'updated' %>
-                    <div class="updated">
-                      <span class="key">Updated</span>
-                      <%= format_i18n_value(phrase.translations.primary.text) -%>
-                      <%= boolean_warning if phrase.translations.primary.boolean? -%>
-                    </div>
-                    <div class="previous">
-                      <span class="key">Previous</span>
-                      <%= format_i18n_value(phrase.translations.primary.previous_text) -%>
-                    </div>
-                  <% else %>
-                    Original:
-                    <%= format_i18n_value(phrase.translations.primary.text) -%>
-                    <%= boolean_warning if phrase.translations.primary.boolean? -%>
-                  <% end %>
+                  <div>Original:</div>
 
                   <%= text_area_tag :"translations[][original_text]",
                       format_i18n_text_area_value(phrase.translations.primary.text),
