--- a/app/views/tolk/searches/show.html.erb
+++ b/app/views/tolk/searches/show.html.erb
@@ -42,25 +42,40 @@
                   <%= boolean_warning if phrase.translations.primary.boolean? -%>
                 </div>
                 <div class="panel-body">
+                  <% multiline? = (phrase.translations.primary.text.include?("\n") || phrase.translations.primary.text.length > 65) %>
                   <div class="row">
                     <div class="translation col-md-6">
                       <%= hidden_field_tag :"translations[][id]", translation.id, :id => "#{translation.object_id}_id" %>
                       <%= hidden_field_tag :"translations[][phrase_id]", phrase.id, :id => "#{translation.object_id}_phrase_id" %>
                       <%= hidden_field_tag :"translations[][locale_id]", translation.locale_id, :id => "#{translation.object_id}_locale_id" %>
                       <div>Translation:</div>
-                      <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale form-control", :id => "#{translation.object_id}_text", :onfocus => "$(this).up('tr').addClassName('active');", :onblur => "$(this).up('tr').removeClassName('active');" %>
+
+                      <% if multiline? %>
+                        <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale form-control", :id => "#{translation.object_id}_text", :onfocus => "$(this).up('tr').addClassName('active');", :onblur => "$(this).up('tr').removeClassName('active');" %>
+                      <% else %>
+                        <%= text_field_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale form-control", :id => "#{translation.object_id}_text", :onfocus => "$(this).up('tr').addClassName('active');", :onblur => "$(this).up('tr').removeClassName('active');" %>
+                      <% end %>
                     </div>
                     <div class="original col-md-6">
                       <div>
                         Original:
                       </div>
 
-                      <%= text_area_tag :"translations[][original_text]",
-                          format_i18n_text_area_value(phrase.translations.primary.text),
-                          :disabled => true,
-                          :class => 'form-control',
-                          :title => phrase.key
-                      %>
+                      <% if multiline? %>
+                        <%= text_area_tag :"translations[][original_text]",
+                            format_i18n_text_area_value(phrase.translations.primary.text),
+                            :disabled => true,
+                            :class => 'form-control',
+                            :title => phrase.key
+                        %>
+                      <% else %>
+                        <%= text_field_tag :"translations[][original_text]",
+                            format_i18n_text_area_value(phrase.translations.primary.text),
+                            :disabled => true,
+                            :class => 'form-control',
+                            :title => phrase.key
+                        %>
+                      <% end %>
                     </div>
                   </div>
                 </div>
