--- a/app/views/tolk/locales/show.html.erb
+++ b/app/views/tolk/locales/show.html.erb
@@ -49,7 +49,7 @@
                 <%= boolean_warning if phrase.translations.primary.boolean? -%>
               </div>
               <div class="panel-body">
-                <% multiline? = (phrase.translations.primary.text.include?("\n") || phrase.translations.primary.text.length > 65) %>
+                <% multiline = (phrase.translations.primary.text.include?("\n") || phrase.translations.primary.text.length > 65) %>
                 <div class="row">
                   <% translation = Tolk::Translation.new(:locale => @locale, :phrase => phrase) %>
                   <div class="translation col-md-6">
@@ -58,7 +58,7 @@
                     <%= hidden_field_tag :"translations[][locale_id]", translation.locale_id, :id => "#{translation.object_id}_locale_id" %>
                     <div>Translation:</div>
 
-                    <% if multiline? %>
+                    <% if multiline %>
                       <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale form-control", :id => "#{translation.object_id}_text" %>
                     <% else %>
                       <%= text_field_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale form-control", :id => "#{translation.object_id}_text" %>
@@ -69,7 +69,7 @@
                       Original:
                     </div>
 
-                    <% if multiline? %>
+                    <% if multiline %>
                       <%= text_area_tag :"translations[][original_text]",
                           format_i18n_text_area_value(phrase.translations.primary.text),
                           :disabled => true,
