--- a/app/views/tolk/searches/show.html.erb
+++ b/app/views/tolk/searches/show.html.erb
@@ -42,7 +42,7 @@
                   <%= boolean_warning if phrase.translations.primary.boolean? -%>
                 </div>
                 <div class="panel-body">
-                  <% multiline = (phrase.translations.primary.text.include?("\n") || phrase.translations.primary.text.length > 65) %>
+                  <% multiline = phrase.translations.primary.text.multiline? %>
                   <div class="row">
                     <div class="translation col-md-6">
                       <%= hidden_field_tag :"translations[][id]", translation.id, :id => "#{translation.object_id}_id" %>
