--- a/app/views/tolk/locales/show.html.erb
+++ b/app/views/tolk/locales/show.html.erb
@@ -56,7 +56,7 @@
                     <%= hidden_field_tag :"translations[][id]", translation.id, :id => "#{translation.object_id}_id" %>
                     <%= hidden_field_tag :"translations[][phrase_id]", phrase.id, :id => "#{translation.object_id}_phrase_id" %>
                     <%= hidden_field_tag :"translations[][locale_id]", translation.locale_id, :id => "#{translation.object_id}_locale_id" %>
-                    <div>Translation:</div>
+                    <div>Translation: <a class="copy" href="#" tabindex="-1" title="Copy original translation">&larr;</a><br></div>
 
                     <% if multiline %>
                       <%= text_area_tag :"translations[][text]", format_i18n_text_area_value(translation.text), :class => "locale form-control", :id => "#{translation.object_id}_text" %>
