--- a/app/views/tolk/locales/show.html.erb
+++ b/app/views/tolk/locales/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<%= render layout: 'tolk/layouts/main' do %>
   <% content_for :head do %>
     <link rel="alternate" type="application/rss+xml" title="RSS" href="<%= tolk.locale_path(@locale, :format => 'atom') -%>" />
   <% end %>
@@ -102,6 +102,4 @@
       <p>&nbsp;</p>
     <% end %>
   </div>
-</div>
-
-<%= render :partial => "tolk/javascripts" %>
+<% end %>
