--- a/app/views/tolk/searches/show.html.erb
+++ b/app/views/tolk/searches/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<%= render layout: 'tolk/layouts/main' do %>
   <div class="search">
     <%= render :partial => "form", :locals => { :locale => @locale } %>
   </div>
@@ -94,6 +94,4 @@
       <p style="text-align: left">No search results.</p>
     <% end %>
   </div>
-</div>
-
-<%= render :partial => "tolk/javascripts" %>
+<% end %>
