--- a/app/views/tolk/locales/show.html.erb
+++ b/app/views/tolk/locales/show.html.erb
@@ -58,7 +58,7 @@
                     <%= hidden_field_tag :"translations[][locale_id]", translation.locale_id, :id => "#{translation.object_id}_locale_id" %>
                     <div>
                       Translation:
-                      <a class="copy" href="#" tabindex="-1" title="Copy original translation"><%= t('tolk.show.copy_original') %></a>
+                      <a class="copy" href="#" tabindex="-1"><%= t('tolk.show.copy_original') %></a>
                       <span class="warning" title="<%= t('tolk.show.interpolation_mismatch') %>">⚠</span>
                     </div>
 
