[+] Adding all other translations

--- a/app/views/tolk/locales/all.html.erb
+++ b/app/views/tolk/locales/all.html.erb
@@ -1,5 +1,5 @@
 <%= render layout: 'tolk/layouts/main' do %>
-  <h3 class="switch">Completed translations <small>(<%= link_to 'See phrases missing translation', @locale %>)</small></h3>
+  <h3 class="switch"><%= t('tolk.show.completed') %> <small>(<%= link_to 'See phrases missing translation', @locale %>)</small></h3>
 
   <% if @locale.has_updated_translations? && action_name != 'updated' %>
     <div class="alert alert-info alert-dismissible">
