--- a/app/views/tolk/locales/show.html.erb
+++ b/app/views/tolk/locales/show.html.erb
@@ -7,7 +7,7 @@
 
   <% if @locale.has_updated_translations? && action_name != 'updated' %>
     <div class="alert alert-info alert-dismissible">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <button type="button" class="close" data-dismiss="alert" aria-label="<%= t 'tolk.alert.close' %>">
         <span aria-hidden="true">&times;</span>
       </button>
       <%= t 'tolk.show.changes' %> <%= link_to t('tolk.show.update_translations'), tolk.updated_locale_path(@locale) %>.
